# Lumbar-Disc-Bulging-Classification

./: .gitignore  README.md  about_dataset.txt  disc_bulging_presentation.pptx  lumbar_disc_bulging_clean.ipynb  pyproject.toml  results.md
models/: bulging_b0_20260531_133514.pth  bulging_v6_20260531_024714.pth
