[project]
name = "lumbar-disc-bulging"
version = "0.1.0"
description = "Lumbar disc bulging classification using SPIDER MRI dataset"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "SimpleITK>=2.5.5",
    "pandas>=3.0.3",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "pillow>=11.0.0",
]

[tool.uv]
# Apple Silicon(MPS) 또는 CPU 전용 빌드 사용 시 별도 index 불필요
# CUDA가 필요한 경우 아래 주석 해제
# [tool.uv.sources]
# torch = { index = "pytorch-cu121" }
# torchvision = { index = "pytorch-cu121" }

# [[tool.uv.index]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# explicit = true
